@startuml

skinparam nodesep 75

hide empty members
title Diagramme de classe du patron de conception ""Observer"

class java.util.Observable <<Subject>>  {
  + addObserver(Observer o)
  + deleteObserver(Observer o)
  + notifyObservers()
  + notifyObservers(arg: Object)
  + setChanged()
}

interface java.util.Observer {
  + {abstract} update(obs : java.util.Observable, arg: Object)
}

java.util.Observable "1" -> "0..n" java.util.Observer

class  FolderController  <<ConcreteSubject>> {
  + getVisits() : Set<Visit>
  + getAntecedents() : Set <Antecedent>
}

java.util.Observable <|-- FolderController

class Folder <<ConcreteObserver>> {
  + ^update(obs : java.util.Observable, arg: Object)
}

java.util.Observer <|.. Folder

FolderController <. Folder

@enduml